Project

General

Profile

Actions

Bug #23597

closed

fsx writethrough test case failures

Added by Jason Dillaman about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Actions #1

Updated by Jason Dillaman about 6 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman

Per Mykola:

    rbd default data pool = datapool
    rbd skip partial discard = true
    rbd cache = true
    rbd cache max dirty = 0
ceph_test_librbd_fsx -d -W -R -p 100 -P /tmp -r 1 -w 1 -t 1 -h 1 -l 250000000 -S 3206 -N 20000 pool_client.0 image_client.0
Actions #2

Updated by Mykola Golub about 6 years ago

Actually, retesting different option combinations, it looks like only `rbd cache = true` is important.

Actions #3

Updated by Jason Dillaman about 6 years ago

Actions #4

Updated by Jason Dillaman about 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by Mykola Golub about 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF