src/librbd/io/ReadResult.h
@@ -41,14 +41,12 @@ public:
     uint64_t object_off;
     uint64_t object_len;
     Extents buffer_extents;
-    bool ignore_enoent;
 
     bufferlist bl;
     ExtentMap extent_map;
 
     C_ObjectReadRequest(AioCompletion *aio_completion, uint64_t object_off,
-                        uint64_t object_len, Extents&& buffer_extents,
-                        bool ignore_enoent);
+                        uint64_t object_len, Extents&& buffer_extents);
 
     void finish(int r) override;
   };
